--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,8 @@ spring:
     redis:
       host: ${DATA_REDIS_HOST}
       port: ${DATA_REDIS_PORT}
+  accesstoken:
+    expired-date: ${ACCESSTOKEN_EXPIREDDATE}
   jpa:
     hibernate:
       ddl-auto: create
@@ -89,6 +91,8 @@ spring:
     redis:
       host: ${DATA_REDIS_HOST}
       port: ${DATA_REDIS_PORT}
+  accesstoken:
+    expired-date: ${ACCESSTOKEN_EXPIREDDATE}
   jpa:
     hibernate:
       ddl-auto: update #create
@@ -129,6 +133,8 @@ spring:
     redis:
       host: ${DATA_REDIS_HOST}
       port: ${DATA_REDIS_PORT}
+  accesstoken:
+    expired-date: ${ACCESSTOKEN_EXPIREDDATE}
   jpa:
     hibernate:
       ddl-auto: create
