feat: 사용자 이미지 수정 api JPA로 변환

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,8 @@ spring:
       port: ${DATA_REDIS_PORT}
   accesstoken:
     expired-date: ${ACCESSTOKEN_EXPIREDDATE}
+  user:
+    default-image: ${USER_DAFAULTIMAGE}
   jpa:
     hibernate:
       ddl-auto: update
@@ -93,6 +95,8 @@ spring:
       port: ${DATA_REDIS_PORT}
   accesstoken:
     expired-date: ${ACCESSTOKEN_EXPIREDDATE}
+  user:
+    default-image: ${USER_DAFAULTIMAGE}
   jpa:
     hibernate:
       ddl-auto: update #create
@@ -135,6 +139,8 @@ spring:
       port: ${DATA_REDIS_PORT}
   accesstoken:
     expired-date: ${ACCESSTOKEN_EXPIREDDATE}
+  user:
+    default-image: ${USER_DAFAULTIMAGE}
   jpa:
     hibernate:
       ddl-auto: create
